--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
   <header data-include="header.partial.html"></header>
   <main>
+    <select data-include="chatgpt.partial.html"></select>
+    <select data-include="chat.partial.html"></select>
     <section data-include="product-carousel-animated.partial.html"></section>
     <section data-include="products-carousel.partial.html"></section>
     <section data-include="products.partial.html"></section>
